--- a/index.html
+++ b/index.html
@@ -1,218 +1,1 @@
-
-<html> 
-<head>
-    <title>memzjjy你妈死了</title>
-</head>
-<body>
-    <font color="red">memzjjy你妈死了</font>
-	<br />
-    <font color="red">你想加我qq骂我怎么办，请添加我为好友→2576247709（记得喷到到哦，比较推荐刷屏器）</font>
-    <br />
-	<font color="red">个人介绍：大家好，我叫memzjjy，我的ip是:171.105.4.18,开通了公网，欢迎大家前来ddos。（开了23333端口哦，而且我还开了个很LJ的服务器欢迎大家DDOS，压测和渗透哦）和我家住在柳州鱼峰区的厕所里面哦（我更老八是邻居，我更爱吃屎哦）我的妈妈在我出生不久就被车撞死了，所以你们可以说我你妈死了；我的爸爸因为吃过多粑粑被撑死了。我的爱好是吃粑粑，使用jvav编写迷你世界，这是我和张浩扬博士用jvav编写的<a href="https://www.mini1.cn/">迷你官网</a>,是不是很厉害？厉害的话，就对我说一句你妈死了，谢谢。除此之外我还与张浩扬开发了多种编程语言，比如像是c艹，hph,bv,tmlh,难语言等等，开发的多种简单容易使用的操作系统，像是dowswin,nulxi,cnmos，roanand，我也开发了许许多多的数据库，有lqs rverse,melqs,elcaro等等，我真是太厉害了！！！外国的数据库不好用，加上memzjjy开发的数据库，好用。memzjjy真是个SB！！！！！</font>
-	
-	<br />
-	<font color="red">关于我的自拍:正在准备中</font>
-	<br />
-	<font color="red">下面是我最喜欢的我   骂   我   自   己环节</font>
-	memzjjy任何人工智能都敌不过阁下这款天然傻瓜。memzjjy阁下长得真是天生励志！memzjjy动物穿这衣服都变人了，你丫一穿上立马就变动物memzjjy你属黄瓜的，欠拍。你媳妇属螺丝的，欠拧。memzjjy我电脑里有你母亲300多张照片memzjjy你给我滚，马不停蹄地滚memzjjy装可爱的话可以瞬间解决人口膨胀的问题memzjjy白痴可以当你的老师，智障都可以教你说人话memzjjy21世纪很危险，快回到你的侏罗纪去吧memzjjy看到你的脸，就觉得你爸妈在制造你的时候没认真。memzjjy我要说你是个二愣子，我都是表扬你memzjjy你1回头吓到一排教学楼你2回头山崩地裂水倒流你3回头哈雷彗星撞地球你4回头姚明改打乒乓球memzjjy你迈着犬步走在乡间的小路，还说自己被别人踢碎的嗓子唱歌像他妈阿杜memzjjy我国那么多兵器你不学，学剑。上剑不学学下剑，下剑招式那么多你要学醉剑。剑铁你不学学银剑！终于你达到了人剑合一的境界那就是——剑人memzjjy我不草你妈你就不知道我是你爸啊memzjjy你考试考不了180，考得了249的哥哥memzjjy你左看像白痴，右看像傻子，上看像头猪，下看像头驴。memzjjy如果你的丑陋可以发电的话全世界的核电厂都可以停摆memzjjy天下之大，大不过你缺的那块心眼memzjjy你长得很抽象。memzjjy我可没说你不要脸，我是说不要脸的都是你这样的memzjjy思想有多远，你就滚多远；光速有多快，你就滚多快memzjjy我忘了世界还有一种人火星人，你从那来的吧memzjjy你小时候被猪亲过吧?memzjjy你长的外形不准比例没打好memzjjy你需要回炉重造memzjjy你再有劲你能憋住尿吗？（骂人的话越毒越好）memzjjy这么不要脸，这么没心没肺，你的体重应该会很轻吧？memzjjy我没认识你之前，我真没发现原来我有以貌取人这毛病。memzjjy你他妈就是被强奸避孕失败生出你这个没闭眼的畜生memzjjy这么多年谁一直照顾你啊？我很佩服他的胆量。memzjjy你出生时是不是被扔上去过３次而只被接住过２次？memzjjy真想立马把我37码的鞋bia到你42码的脸上memzjjy你是个可爱的，迷人的辛勤的，白色的小小的总在为人民服务的新型杂交鱼种memzjjy长的很科幻，长的很抽象!memzjjy大哥，把你脸上的分辨率调低点好吗？memzjjy你的长相突破了人类的想象...memzjjy你妈生你时是不是把人扔了把胎盘养大memzjjy你从小缺钙，长大缺爱，姥姥不疼，舅舅不爱。左脸欠抽，右脸欠踹。驴见驴踢，猪见猪踩。天生就是属黄瓜的，欠拍！后天属核桃的，欠捶！终生属破摩托的，欠踹！找个媳妇属螺丝钉的，欠拧！你说你，爷爷我教你练刀，你练剑，你还上剑不练，练下贱！金剑不练，练银剑！给你剑仙你不当，赐你剑神你不做，非死皮赖脸哭着喊着要做剑人！真是的，何必呢？！因为所以,科学道理;不但而且,我是恁爹.冭看你玉树临风，英俊潇洒，风流倜傥，人见人爱，花见花开，想必一定是人渣中的极品，禽兽中的禽兽.看看啊，你这小脸瘦得，都没个猪样啦！现在把你丢到厕所里，厕所都能吐了，把你扔进黑洞里，黑洞也能自我爆炸了！快过节了，送你一副对联memzjjy上联memzjjy树不要皮，必死无疑下联memzjjy人不要脸，天下无敌横批memzjjy人之贱无敌一巴掌把你打到墙上扣都扣不下来!!!你长得挺有创意,活得挺有勇气,丑不是你的本意,是上帝在发脾气.你老说你男朋友长得帅,有钱,长得是有钱,长得跟前列线似的,尿尿都分叉了,赶快去治治吧!!人贱一辈子猪贱一刀子活着浪费空气死了浪费土地在家浪费RMB中国那么多兵器你不学，偏学剑；上剑不学学下剑；下剑招式那么多，你学醉剑；剑铁剑你不学，去学银剑！终于，你练成了武林绝学memzjjy醉银剑！最后达到人剑合一的境界－－－剑人.memzjjy朋友，我听说是政府要清理人渣，你快跑，别告诉别人是我告诉你的，快跑吧，别谢我，别被抓进去就好memzjjy如果你是卫星我就等待你，如果你是恒星，我就爱上你，可是，你是只猩猩。memzjjy放心吧，你晚上一个人出去不会有危险，因为你长得够安全。memzjjy听说你被拐卖，真的把我吓坏，你虽从小痴呆，却对社会无害，谁人如此大胆，竟拿你去卖，我真替他担心，卖得掉才怪！memzjjy也不想打击你了。你去动物园看看有没有合适的工作适合你，你这样在街上乱跑很容易被警察射杀的。memzjjy你个神经分裂，精神错乱，外带小儿麻痹，缺陷掉线儿。你长得非法走私，鬼斧神工的，你还好意思出来吓人。你说动物穿衣都向人了，你穿上衣服更像动物了。我都起来怪了，世博会这么不着你展览呢。你敢不敢告诉我你是不是全家没人了，就剩你苟活于世了。把你整的神经错乱，跑出来丢人现眼啊。难道所天晴了，雨停了，你有行了被。我勇敢大方的告诉你，你人不像人，东西不像东西。唐僧不曾经说过这样一句话，人是人他妈生的，妖是妖他妈生的，你说你人不像人，妖不像妖，所以你是人妖啊。我真恨不得郝起一块社会主义大板砖，罩着你死无人样的脸上拍下去，让你知道什么叫做死了真好。你说你长的这么科幻，这么环保，如此的惊险，富有创意，我就没见过你这么让人恶心，恶心到让人翻江倒海了。你就像厕所里的插画，你是臭不要脸啊。memzjjy水清则无鱼，人贱则无敌，树不要皮，必死无疑，人不要脸，天下无敌！memzjjySB!!!!!!!!====================================memzjjyxxx是谁，是非洲大美眉，块大肉肥，皮屁眼卡地雷memzjjy今天早上真是好呀，捡垃圾的XXX来到美人岛，看见美女在洗澡，抱起一个往家跑，回到家，把门插，三角裤衩往下扒，仔细一看是他妈，他妈使出大必杀，把他打到墨西哥，娶了一个媳妇叫傻瓜，生了六个，死了一个，还有一个被谋杀，夜里放屁熏死仨，还有一个是他妈memzjjy螃蟹想摸王八脸，社会大哥太显眼，memzjjy天在呐喊海在啸，宽哥有才更有道！
-                 <font color="red">我想看着你说话，可你为什么把脸埋在你的屁股里？...哦？对不起，我不知道那是你的脸，那你的屁股哪儿去了？
-我也不想打击你了。你去动物园看看有没有合适的工作适合你，你这样在街上乱跑很容易被警察射杀的。MMD,我从没见过长的会发出臭味的垃圾人，"唾弃"名词的源头，每天退化三次的恐龙，人类历史上最强的废材，上帝失手摔下来的旧洗衣机，能思考的无脑袋生物，损毁亚洲同胞名声的祸害，祖先为之蒙羞的子孙，喷出来的口水比sars还致命，  骂人的话 越毒越好不带脏字一大学生最低奋斗目标：农妇，山泉，有点田。骑白马的不一定是王子，他可能是唐僧；带翅膀的也不一定是天使，他可能是鸟人。不想吃天鹅肉的癞蛤蟆不是好癞蛤蟆!男人靠的住，母猪能上树!比遇见一个泼妇更让人头痛的是...同时遇见两个泼妇。长的丑不是你的错，可是出来吓人就是你的错！在这个非主流脑残横飞的年代，我们总能遇到一些神经病上来就对我们指指点点 骂骂咧咧的好像什么事情都是我们做错了一样，那么对付这些人最好的方法就是回骂过去那么今天小编就教大家一些一针见血的语录，让你瞬间变得强大起来！一脸兴冲冲的，跟喝了尿糖似的。当初你傲成那个样子，现在又是玩哪出呢。我给狗扔块骨头它都知道冲我摇摇尾巴，你算什么啊。
-把你的眼屎擦掉了看清楚是谁说话再行不。
-麻烦你看清楚什么叫货在说话好吗。
-我怎么敢碰你呢，我怕我买洗手液买穷自己。
-缺狗粮才知道来找我?
-别以为你名门什么的，你以为你爸是李刚啊。
-别人若是骂你，看p啊or看毛啊，你可以回，看你呢啊。
-你妈生你的时候调成了随机状态了吧。
-你爸是731部队的吧，研究病毒没研究明白，把你研究出来了。
-你的长相和智商都挺哈韩的。
-别以为你长的稀有样我们就应该物以稀为贵。
-你是不是觉得你胸小还替国家省布料了还挺骄傲啊。
-你说你装的个名媛淑女的样er，对了，你爹是天蓬啊。
-别张口闭口的就带着你爹你妈，你那么孝顺出来得瑟什么。
-有种人，必须要人指着他鼻子骂，他才知道骂的是他。
-遇见你之前我还不以貌取人呢。
-你说你能干点啥，去打仗的话子弹飞弹会忍不住向你飞。
-别跟我说话，我有洁癖。
-我忍屎忍尿也忍不下你呀。
-一巴掌把你打到墙上扣都扣不下来。
-你的牙如同天上的繁星，色泽鲜艳，相距甚远。
-这两片嘴唇，切切倒有一大碟子。
-听说你傍大款了，认二郎神当主人了。
-你玩劈腿，劈那么开，不怕蛋蛋受凉啊
-别人要说，我c你妈，你可以回答我阉你爸。
-别人骂你装13，你可以回，恩，你真13。
-别人骂你吵，你回说，我炒shi给你吃啊。
-你妈带你逛街，别人都问：大姐，你这猴多少钱买的。
-瞅你长得姥姥不疼，舅舅不爱的。
-遇到爱占小便宜的人，
-你可以说，那么爱占便宜，假如拿人家的真手短的话，你早就高位截瘫了。
-遇到游戏开G，
-孩子，回去看看你妈在不在家把，如果没在家，是开G开死的。
-别往上看，只要你抬头臭氧层就会破洞。
-这么不要脸，这么没心没肺，你的体重应该会很轻吧？
-别穿的跟慰安妇似的瞎溜达，手榴弹看到你会自爆。
-天下之大，大不过你缺的那块心眼。
-你爸当初就应该忍住，怎么没把你射墙上。
-你别逼我在我和你全家之间加动词或者是名词啊。
-把XX的照片贴墙上，白天避邪，晚上避孕。
-你全家非主流，你妈黒袜子，你爸锡纸头。
-你光着身子追我两公里，我回一次头都算我是流氓!
-勾引我男人吗，我不过是把你当做发春的老母狗罢了。
-看你走个路都昂首挺胸的，怕别人不知道你是飞机场吗。
-整天跟这个关系好，那个关系好，到头来不过你在别人眼里算什么呢。
-整天满身的劣质香水味还往男人身边凑，谁多看你一眼了吗。
-你就像根苦瓜，穿得这么清凉，长得这么败火。
-春天都过了，你还在发春做什么，原来发春不分季节的啊。
-对方说，巴黎圣母院缺个敲钟的，你去吧，直觉得回答，怎么，你从那辞职了。
-如果对方要说，你当我是xx啊（xx可替换），你便可以回答，啊，原来你不是啊。
-少在我面前拽的跟二五八万似的，摆好POSE，在装13。
-不该看的不看，不该说的不说，不该听的不听，不该想的不想，该干什么干什么去。
-和你接触的时间越长，我就越喜欢狗，狗永远是狗，人有时候不是人。
-像你这种的家伙，只能演电视剧里的一陀粪，比不上路边被狗洒过尿的口香糖。
-你肺活量是多少啊？（意思是，能把牛13吹得这么大）
-我玩装X的时候你还不知道在那家幼儿园玩勺子把呢（别人骂你装13）
-整天穿这个低胸穿那个豹纹，看你这身打扮整的跟二战前淘汰下来的慰安妇似的。
-jian人永远都是jian人，就算经济危机了，你也贵不了。
-请你卷成一团圆润的离开。
-有病你治病，你别找我啊，我又不是兽医。
-你内张脸长地比盆骨都标志。
-你以为四海之内皆你妈啊，处处都得让着你。
-祝你女朋友永远都是充气的。
-祝你男朋友永远都是电动的。
-要不是那晚，我忘了买套套，你早就被冲进下水道。
-对方骂你：（各种骂人的脏话），你回，你在做自我介绍吗。
-听你说话，一种智商上的优越感油然而生。
-好久没有听到有人能把牛吹得这么清新脱俗了。
-如果对方要是骂你，你可以回，请别跟我说话吐口水，我没拿钱，买不起湿巾。
-其实你算什么呢，不过是一条乱吠的狗罢了。
-你脑子进水了吧，还是100°的那种沸水。
-有人若是骂你你便说，再说一遍！有种你再说一遍，
-他若是还说，你便说，真乖，叫你说就说
-他必定会骂你，你便说，你再说一遍，有种你再说一千遍一万遍，
-他若是不说话，你可以说，不敢说是吧，以后不要这么嚣张，
-然后你可以走了。
-无论对方说什么，你都回答，你牙齿里有根青菜，
-如果对方说，胡说，我今天没吃青菜，你就惊讶地说，原来是昨天的，以此类推。
-因为那个很普遍，所以若是对方先说
-你可以说，你想吃吗，我可以抠给你。
-别老问别人为什么不愿意理你，不愿意跟你说话，因为太稀罕你而不愿意搭理你现实吗，你信吗。
-我也不想以貌取人，我也有努力看见你的灵魂呀，结果你的灵魂也没有比你的外表美啊。
-国家怎么就没拿你的脸皮研究防弹衣?
-请问我能向你要几张脸皮吗，我看你的脸皮里三层外三层的，少几张应该没关系吧。
-别人若是骂，你妹啊，你便可以说，我没妹。
-您是不是把敌敌畏当可乐把您那八毛钱十二斤的脑袋喝秀逗了。
-你不去当兵太可惜了，你长的这么丑，往战场上一放人死了一大半，
-连核炸弹都省了，你早生个几年就不会有南京大屠杀了。
-骂人不带脏字的句子
-我要生孩子一定让你教他，还要教他历史，看一眼你的脸，中华五千年全记住了。
-你自己回家拿面镜子好好照照，自己头上究竟有几根葱，没有的话去买几把来插在头上,装蒜吧你。
-你的父母因你而快乐，因为你太像他们了，跟本不像是买来的孩子。
-你和你爸大冬天穿着裤衩，嘴里叼根烟站在前门楼子大街上，
-人来人往都说你俩神经，你非说：我俩形象代言人，海尔兄弟。
-看你张那磕碜样，满脸大疙瘩还非要说是非典时期带口罩捂出的痱子，
-人家一群大雁往南飞看见你那张脸扭头就蹦了西了，你看你张的多有威慑力吧。
-啊，没事，就是清明上坟的时分，忽然想起您，为什么那么多人死，您还不死呢。
-我就奇怪了，像你这样的稀奇物种，应该列为国家一级保护动物，在去世博会展出。
-说不定，你还可以为我国的外星物种科研事业做出贡献呢。
-应该立刻把你从鸡窝里揪出来，然后关到监狱里去！
-咱掏心掏肺地说吧，你能撑起一青楼。
-你绝对是你妈亲生的，不然你妈怎么会养你这么个混账东西！
-你要找人打我吗，快把你村头的猫猫狗狗都叫出来。
-别这么说人家，人家也村头一朵花呢，不过自从她是花之后，牛粪都没有了。
-别动不动就爆粗口，你把你妈揣兜了随口就说。
-你要感谢这世界上什么都假，连避孕药都是假的，要不然你也长不了这么大。
-就算是一坨shi，也有遇见屎壳郎的一天，所以你大可不必为今天的自己有太多担忧。
-你已经懒得理他，那你就一直不说话，等他问你怎么不说话，你说狗咬我一口，我不可能咬狗一口。
-别人骂你，你说畜生你骂谁，他若是说话，你便说哦，畜生骂我啊。
-你难道不知道你身上的味道就像是一条死了几天的的金鱼，
-拿你当人的时候，你尽量装得像点好吗。
-孩子回家买两瓶妇炎洁孝顺一下你的爸妈吧。
-看到了你，我突然就明白了毕加索是个怎么样的存在。
-你不是青春期靠后，就是更年期提前了。
-你这样的女的真够戳的，差点给我隐形眼睛都戳掉了。
-别人若是说，放屁，你便可以说，你要吃啊。
-你的智商和喜马拉雅山的氧气一样，稀薄。
-回头买两瓶妇炎洁刷刷您沉鱼落雁的容貌好吗。
-我不是草船，你的贱别往我这发。
-是啊，您多出名啊，拍过100多部电影，就是现在扫黄不让播了。
-不要以为你晒黑了，就能掩盖你是白痴的事实。
-等我有钱了，我就带我你去最好的神经病院。
-在男厕所里泡了三天三夜后再被放进泡菜缸里腌了三天三夜一样让人近儿远之。
-遇事要先从自己身上找原因，别一拉不出屎就怪地球没有吸引力，
-你喷粪之前先想想你自己都干过什么，有没有资格说别人，
-我是不够完美，但是我坦白自然，你呢。
-要不是老师说不让随地扔垃圾，我早就把你扔了。
-你这也是可持续性发展啊，从这个学校骚到现在这个学校。
-出门带个面具别让城管和市容看到。他们多辛劳啊，
-一天到底为了咱们这个城市能评上个”十佳卫生城市“。你让他们情何以堪啊。
-你是不是看到我们这样身心健康没有性病的市民就打心眼里愤恨呢？
-到处传我坏话麻烦别让我知道，让我知道麻烦别不承认，终于承认麻烦别装牛13。
-我以为你又多牛13，找人为什么要找我前男友呢，
-我剩下的你就想利用是吗，对不起，他的心还在我这。
-看你那表情，找人找来了就一副狗见到了主人一样粘了上去，好像怕谁不知道你有人似的
-跟谁整那个表情呢，我是你妈啊你那么看我。
-我给你道歉的机会了，你却跟我装x，你有跟我装x的权利，我就有整死你的实力。
-姑娘，你那身时尚的行头，尤其是那一双套了凉鞋的黑棉袜，着实令人拍案叫绝。
-长得丑不是你的错，你老实er的不行么，非得得瑟一下，让我们知道你是大哥。
-嫉妒我有男人吗，嫉妒归嫉妒，做人不要做狗，在背后诋毁有意思？
-你说，我青春期起痘痘，你更年期羡慕是吗。
-再发嗲，也改变不了你奔三的年龄和样貌。
-老娘自然卷怎样，比起你的锅盖是不是好太多了呢，
-跟马桶盖似的你不怕着苍蝇吗，你个西瓜太郎快滚回你的日本去，别显眼得瑟了。
-看你一天天也穿的人模狗样的怎么就不干点人事呢。
-你还追个时髦剪个中分，麻烦你瞅瞅你那是三八分好吗。
-天天拿瓶自己家自来水灌的农夫山泉还觉得自己过的挺小资是吗。
-说老娘男人是两条腿的男人，矮油，看来你男人是三条腿的蛤蟆啊。
-别老成天日日日的，你家，性饥渴了去找隔壁的旺财啊。
-有娘养没娘教育的，就教你怎么捅咕人了。
-照个相还掘个嘴，鼓个腮帮子，要不就握个拳头弄脸旁边，
-你要打谁啊还是你脑血栓啊半身不遂啊。
-不知道几斤几两重是吗，喏，拐弯出有个药房，里面有个称，记着，别给人家弄坏了。
-你这个傻13就像南方的农作物，一年三熟，从来都不带歇气儿的。
-瞅你走个道还昂首挺胸的，别撑了，再撑就一个小馒头。
-你以为你是大力水手吃点菠菜就能出来跟我叫嚣了？
-你他妹的吃了多少勇气果子敢这么跟我说话。
-你妈当初生你的时候，估计是把人整丢了，把胎盘养大了。
-知道自己是飞机场走路就隐蔽点，别昂首挺胸生怕别人不知道似的。
-说我嫉妒你，矮油，擦干你的眼屎看看，
-老娘除了没你那么不要脸还有什么，你还有什么可得瑟的。
-骂人不带脏字的句子
-你是说你老母小三如此多娇吗，非要你老母损你你才爽吗，真是骚13数不胜数啊。
-我是多想跟你们将素质，可我忍屎忍尿也忍不了你们啊，
-讲素质你们配吗，嚼舌根不怕嘴巴烂掉吗，狗乱叫算什么本事，真咬到我才算你们厉害。
-看你一天天在男人身边晃悠，谁爱瞅你给你扔根骨头了？
-哪天遇上个满不吝的，给你一板儿砖，你就知道什么是肝儿颤了。
-你是脑壳里面全是粑粑，所以想的事情都和苍蝇一样没有方向。
-看见你就好像看见市场上快下市的小青菜，5毛钱一大把。
-你跟谁俩整那表情呢，我欠你贷款要到期了还是怎么的。
-你说不要等你翻了身，可咸鱼翻身，还是咸鱼。
-敢惹我，把你名字电话发到猫扑大杂烩上让MOPPER喷死你。
-这帅哥心思细腻又有手段，风流俊俏身材又火，真是要才有才要貌有貌要胸有胸！
-你以为自己是哈雷彗星，全地球60亿人都要瞻仰啊。
-你居然好意思把自己当人类，你也不用你那个为负数的智商想一下你配当人类吗？
-回去洗洗脸，姐送你10斤香水，盖盖你身上的大渣子味。
-你甘心给别人当厕纸，人家还嫌你纸软弄脏了手指，纸硬，擦伤了屁股。
-阎王见了你都得吓得连哭带嚎抹着泪儿找妈妈。
-如果不是遇见你，我一辈子都不会理解装13的真正含义。
-我在你觉得你混的很牛13，别忘了当初你是什么狗样。
-看你一天天的装柔弱，看见你老娘立马就懂了什么叫小姐的身子丫鬟的命。
-其实我有多爱瞅你你知道吗，一天看不见你风骚的母狗样姐就蛋疼。
-你是我见过的容量最大的铅笔盒了，装那么多笔你不累吗。
-别挤着你那俩旺仔满世界的呼喊你是有沟的Ru霸。
-你以为你说你是处女我就感觉不到你是被处理过的女人吗。
-就你那眼缝，跟ATM银行自动取款机插卡口差不多宽的能见度。
-吹NB能带动经济建设吗？吹NB能促进事业发展吗？吹NB能引领共奔小康吗？
-你装什么黑社会，哦哦原来你就是非洲黑人难民社区居委会。
-如果多吃鱼可以补脑让人变聪明的话，那么你至少得吃一对儿鲸鱼。
-打是亲骂是爱，别总骂你妈，都快跟你妈产生感情了。
-遛累了，他坐这，狗坐这，一边高，谁过来都纳闷：这是谁家双胞胎啊？
-别做点错事就把什么脏水都往自己身上泼，姐还要留着冲厕所呢。
-牛粪终归是牛粪，上锅蒸了也不会变成香饽饽。
-有头在空中飞得口吐白沫的牛,要我帮它下来,唯一的方法是让你闭上嘴。
-你很了不起么。不就是有动物保护协会撑？
-无论你再怎么骂我，我都不会生气，人干嘛要和一个连狗都不如的东西生气呢。
-你以为你装可爱就回归童年了？
-</font>
-</body>
-</html>
+nmsl
